# selfhosted-runners

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  install.py  pyproject.toml
.github/: dependabot.yml  release.yml
.github/workflows/: create-release.yml  test-run.yml
infra/: .terraform.lock.hcl  main.tf  main.tfplan  outputs.tf  providers.tf  variables.tf
scripts/: install-deps.py  install.py  remove.py
